--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
-title: "A Minimal Book Example"
-author: "Yihui Xie"
+title: "WildCAM: Examples of camera trap data exploration and analysis in R"
+author: "WildCAM Network"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 output: bookdown::gitbook
@@ -9,28 +9,34 @@ bibliography: [book.bib, packages.bib]
 biblio-style: apalike
 link-citations: yes
 github-repo: rstudio/bookdown-demo
-description: "This is a minimal example of using the bookdown package to write a book. The output format for this example is bookdown::gitbook."
+description: "This resource is a 'living document' representing useful data exploration and data analysis workflows we use within the WildCAM network and beyond."
 ---
 
-# Prerequisites
+# Introduction
 
-This is a _sample_ book written in **Markdown**. You can use anything that Pandoc's Markdown supports, e.g., a math equation $a^2 + b^2 = c^2$.
+## What this guide is 
 
-The **bookdown** package can be installed from CRAN or Github:
+- An R code reference manual for basic concepts in the exploration and analysis of camera data
+- A tool to provide hands on experience of standardised camera trap data in R 
+- A link to resources and papers which showcase the types of analyses you can perform (and would maybe want to replicate in the future)
+- A 'living' document - it will updated and curated by different lab members through time
 
-```{r eval=FALSE}
-install.packages("bookdown")
-# or the development version
-# devtools::install_github("rstudio/bookdown")
-```
+## What this guide isn't
 
-Remember each Rmd file contains one and only one chapter, and a chapter is defined by the first-level heading `#`.
+- The "best" way to explore / analyse your data (although we hopefully provide a good foundation)
+- The "best" R code for camera traps
+- A static document
 
-To compile this example to PDF, you need XeLaTeX. You are recommended to install TinyTeX (which includes XeLaTeX): <https://yihui.name/tinytex/>.
+## How to use this handbook
 
-```{r include=FALSE}
-# automatically create a bib database for R packages
-knitr::write_bib(c(
-  .packages(), 'bookdown', 'knitr', 'rmarkdown'
-), 'packages.bib')
-```
+- Browse the pages in the Table of Contents, or use the search box
+- You can follow-along with the example data
+- Explore addition “Resources” at the end of each section for great applications of camera trap data
+
+## Get in touch
+
+If you have any questions about this document and the information it contains, please email use at XXX YYY or submit an issue on our [data analysis GitHub page](https://github.com/WildCoLab/WildCAM_Data_Analysis). 
+
+## Acknowledgements
+
+This guide is produced by the members of the Wildlife Coexistence Lab at UBC. Check out our [website]() 
